# gaggle

./: .coverage  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  RESEARCH.md  ROADMAP.md  TESTING_ASSESSMENT.md  TESTING_STATUS_FINAL.md  cli_demo.py  demo.py  example.py  pyproject.toml  pytest.ini  simple_demo.py  simple_test.py  test_agent_comprehensive.py  test_coverage_boost.py  test_coverage_simple.py  test_critical_coverage.py  test_final_coverage_push.py  test_functionality.py  test_massive_coverage_boost.py  test_phase1_communication.py  test_phase2_memory.py  test_phase3_coordination.py  test_production_ready.py  test_productionized_features.py  test_pydantic_validation.py  test_simple.py  validation_summary.py
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_workflow.md
research/: effective-scrum-teams.md  multi-agent-scrum-systems.md
src/gaggle/: __init__.py  main.py
src/gaggle/agents/: __init__.py  base.py
src/gaggle/agents/architecture/: __init__.py  tech_lead.py
src/gaggle/agents/coordination/: __init__.py  product_owner.py  scrum_master.py
src/gaggle/agents/implementation/: __init__.py  backend_dev.py  frontend_dev.py  fullstack_dev.py
src/gaggle/agents/qa/: __init__.py  qa_engineer.py
src/gaggle/config/: __init__.py  models.py  settings.py
src/gaggle/core/: __init__.py  backlog.py  sprint.py  team.py
src/gaggle/core/communication/: __init__.py  bus.py  messages.py  protocols.py
src/gaggle/core/coordination/: __init__.py  adaptive_planning.py  continuous_learning.py  quality_gates.py
src/gaggle/core/memory/: __init__.py  caching.py  compression.py  hierarchical.py  retrieval.py
src/gaggle/core/production/: __init__.py  cicd_pipeline.py  monitoring.py  scalability.py
src/gaggle/core/state/: __init__.py  context.py  machines.py
src/gaggle/dashboards/: sprint_metrics.py
src/gaggle/integrations/: cicd_pipelines.py  github_api.py  llm_providers.py  strands_adapter.py
src/gaggle/integrations/github/: __init__.py  client.py  issues.py  projects.py  pull_requests.py
src/gaggle/integrations/llm/: __init__.py
src/gaggle/learning/: multi_sprint_optimizer.py
src/gaggle/models/: __init__.py  github.py  sprint.py  story.py  task.py  team.py
src/gaggle/optimization/: cost_optimizer.py
src/gaggle/teams/: custom_compositions.py
src/gaggle/tools/: __init__.py  code_tools.py  github_tools.py  integration_tools.py  project_tools.py  review_tools.py  testing_tools.py
src/gaggle/utils/: __init__.py  async_utils.py  cost_calculator.py  logging.py  token_counter.py
src/gaggle/workflows/: __init__.py  daily_standup.py  sprint_execution.py  sprint_planning.py  sprint_review.py
tests/: conftest.py
tests/end_to_end/: test_complete_sprint_cycle.py
tests/integration/: test_sprint_workflows.py
tests/unit/: test_agents.py  test_integrations.py  test_optimization.py
tests/unit/test_agents/: test_product_owner.py
tests/unit/test_core/: test_sprint.py
